# troubadix

./: .coveragerc  .gitignore  README.md  plugins_config.toml  pyproject.toml  troubadix.toml  troubadix_config.toml
.docker/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: ci-python.yml  codeql.yml  container.yml  conventional-commits.yml  deploy-pypi.yml  release-pontos-manually.yml  release-pontos.yml  update-header.yml
changelog/: v22.10.0.md  v22.10.1.md  v22.10.2.md  v22.10.3.md  v22.11.0.md  v22.12.0.md  v22.12.1.md  v22.12.2.md  v22.2.0.md  v22.3.0.md  v22.3.1.md  v22.3.2.md  v22.3.3.md  v22.4.0.md  v22.4.1.md  v22.4.2.md  v22.4.3.md  v22.4.4.md  v22.5.0.md  v22.5.1.md  v22.6.0.md  v22.6.1.md  v22.6.2.md  v22.6.3.md  v22.6.4.md  v22.6.5.md  v22.7.0.md  v22.7.1.md  v22.7.2.md  v22.7.3.md  v22.7.4.md  v22.7.5.md  v22.7.6.md  v22.7.7.md  v22.7.8.md  v22.7.9.md  v22.8.0.md  v22.8.1.md  v22.8.10.md  v22.8.2.md  (+28 more)
naslinter/: __init__.py  __version__.py  argparser.py  badwords.py  helper.py  naslinter.py  plugin.py  runner.py
naslinter/checks/: check_valid_oid.py  check_valid_script_tag_names.py  check_var_assign_in_if.py  check_vt_placement.py
naslinter/codespell/: codespell.additions
naslinter/helper/: __init__.py  helper.py  patterns.py
naslinter/plugins/: __init__.py  badwords.py  changed_oid.py  copyright_text.py  copyright_year.py  creation_date.py  cve_format.py  cvss_format.py  dependencies.py  dependency_category_order.py  deprecated_dependency.py  deprecated_functions.py  description.py  double_end_points.py  duplicate_oid.py  duplicated_oid.py  duplicated_script_tags.py  encoding.py  forking_nasl_funcs.py  get_kb_on_services.py  grammar.py  http_links_in_tags.py  illegal_characters.py  includes.py  log_messages.py  misplaced_compare_in_if.py  missing_desc_exit.py  missing_tag_solution.py  newlines.py  openvas_lint.py  overlong_script_tags.py  patterns.py  prod_svc_detect_in_vulnvt.py  qod.py  risk_factor.py  script_add_preference_type.py  script_calls_empty_values.py  script_calls_mandatory.py  script_calls_recommended.py  script_category.py  (+22 more)
oldlint/: pandoras_box.py  replace_svn_props.py  run_qa_check.py
oldlint/steps/: __init__.py  check_badwords.py  check_changed_oid.py  check_copyright_text.py  check_copyright_year.py  check_creation_date.py  check_cve_format.py  check_cvss_format.py  check_dependencies.py  check_dependency_category_order.py  check_deprecated_dependency.py  check_display.py  check_doubled_end_point.py  check_duplicate_oid.py  check_duplicated_script_tags.py  check_encoding.py  check_for_tabs.py  check_forking_nasl_funcs.py  check_get_kb_on_services.py  check_grammar.py  check_http_links_in_tags.py  check_illegal_characters.py  check_lint.py  check_log_messages.py  check_misplaced_compare_in_if.py  check_missing_desc_exit.py  check_missing_solution_tag.py  check_newlines.py  check_overlong_script_tags.py  check_prod_svc_detect_in_vulnvt.py  check_qod.py  check_scm_tags.py  check_script_add_preference_type.py  check_script_calls_and_tags.py  check_script_category.py  check_script_family.py  check_security_messages.py  check_set_get_kb_calls.py  check_solution_text.py  check_solution_type.py  (+9 more)
tests/: fail2.nasl  test.nasl  test_argparser.py  test_badwords.py  test_helper.py  test_log.txt  test_log_fail.txt  test_naslinter.py  test_plugin_discovery.py  test_reporter.py  test_results.py  test_runner.py  test_update_modification_date.py
tests/helper/: test_date_format.py  test_if_block_parser.py  test_linguistic_exception_handler.py  test_patterns.py  test_remove_comments.py  test_text_utils.py
tests/manual_tests/: comment_removal_diff.py
tests/plugins/: __init__.py  fail.nasl  fail2.nasl  test.nasl  test_badwords.py  test_copyright_text.py  test_copyright_year.py  test_creation_date.py  test_cve_format.py  test_cvss_format.py  test_dependencies.py  test_dependency_category_order.py  test_deprecated_bugtraq_id.py  test_deprecated_dependency.py  test_deprecated_functions.py  test_description.py  test_double_end_points.py  test_duplicate_oid.py  test_duplicated_oid.py  test_duplicated_script_tags.py  test_encoding.py  test_forking_nasl_funcs.py  test_forking_nasl_functions.py  test_get_kb_on_services.py  test_grammar.py  test_http_links_in_tags.py  test_if_statement_syntax.py  test_illegal_characters.py  test_includes.py  test_infos_array_keys.py  test_last_modification.py  test_log_messages.py  test_malformed_dependencies.py  test_misplaced_compare_in_if.py  test_missing_desc_exit.py  test_missing_tag_solution.py  test_multiple_re_parameters.py  test_newlines.py  test_no_solution.py  test_openvas_lint.py  (+41 more)
tests/standalone_plugins/: __init__.py  test_affected_scripts.py  test_changed_creation_date.py  test_changed_cves.py  test_changed_oid.py  test_community_entries.py  test_dependency_graph.py  test_deprecate_vts.py  test_file_extensions.py  test_last_modification.py  test_no_solution.py  test_version_changed.py  test_version_updated.py
troubadix/: __init__.py  __version__.py  argparser.py  plugin.py  reporter.py  results.py  runner.py  troubadix.py
troubadix/codespell/: codespell.additions  codespell.exclude  codespell.ignore
troubadix/helper/: __init__.py  date_format.py  helper.py  if_block_parser.py  linguistic_exception_handler.py  patterns.py  remove_comments.py  text_utils.py
troubadix/plugins/: __init__.py  badwords.py  copyright_text.py  copyright_year.py  creation_date.py  cve_format.py  cvss_format.py  dependencies.py  dependency_category_order.py  deprecated_bugtraq_id.py  deprecated_dependency.py  deprecated_functions.py  description.py  double_end_points.py  duplicate_oid.py  duplicated_script_tags.py  encoding.py  forking_nasl_funcs.py  forking_nasl_functions.py  get_kb_on_services.py  grammar.py  http_links_in_tags.py  if_statement_syntax.py  illegal_characters.py  includes.py  infos_array_keys.py  last_modification.py  log_messages.py  malformed_dependencies.py  misplaced_compare_in_if.py  missing_desc_exit.py  (+51 more)
(+76 files in other folders)
