[tool.poetry]
name = "troubadix"
version = "22.6.0"
description = "A linting and QA check tool for NASL files"
authors = ["Greenbone <info@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/greenbone/troubadix"
homepage = "https://github.com/greenbone/troubadix"

classifiers=[
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",  # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "troubadix"},
  { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
pontos = "^22.2.1"
codespell = "^2.0.0"
python-magic = "^0.4.25"
chardet = "^4.0.0"
validators = ">=0.18.2,<0.21.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
black = "^22.3"
autohooks = "^21.7.0"
autohooks-plugin-black = "^21.12.0"
autohooks-plugin-pylint = "^21.6.0"
autohooks-plugin-isort = "^22.3.0"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.isort',
  'autohooks.plugins.black',
  'autohooks.plugins.pylint',
]

[tool.isort]
profile = "black"
line_length = 80

[tool.pontos.version]
version-module-file = "troubadix/__version__.py"

[tool.poetry.scripts]
troubadix = 'troubadix.troubadix:main'
troubadix-changed-oid = 'troubadix.standalone_plugins.changed_oid:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
