[tool.poetry]
name = "troubadix"
version = "24.7.3"
description = "A linting and QA check tool for NASL files"
authors = ["Greenbone <info@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/greenbone/troubadix"
homepage = "https://github.com/greenbone/troubadix"

# Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers=[
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",  # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "troubadix"},
  { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
pontos = ">=22.7,<25.0"
codespell = "^2.0.0"
python-magic = "^0.4.25"
chardet = ">=4,<6"
validators = "0.20.0"
gitpython = "^3.1.31"
charset-normalizer = "^3.2.0"

[tool.poetry.dev-dependencies]
autohooks = ">=21.7.0"
autohooks-plugin-black = ">=21.12.0"
autohooks-plugin-pylint = ">=21.6.0"
autohooks-plugin-isort = ">=22.3.0"

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.isort',
  'autohooks.plugins.black',
  'autohooks.plugins.pylint',
]

[tool.isort]
profile = "black"
line_length = 80

[tool.pontos.version]
version-module-file = "troubadix/__version__.py"

[tool.poetry.scripts]
troubadix = 'troubadix.troubadix:main'
troubadix-changed-oid = 'troubadix.standalone_plugins.changed_oid:main'
troubadix-last-modification = 'troubadix.standalone_plugins.last_modification:main'
troubadix-version-updated = 'troubadix.standalone_plugins.version_updated:main'
troubadix-no-solution = 'troubadix.standalone_plugins.no_solution:main'
troubadix-changed-packages = 'troubadix.standalone_plugins.changed_packages.changed_packages:main'
troubadix-changed-cves = 'troubadix.standalone_plugins.changed_cves:main'
troubadix-allowed-rev-diff = 'troubadix.standalone_plugins.allowed_rev_diff:main'
troubadix-file-extensions = 'troubadix.standalone_plugins.file_extensions:main'
troubadix-deprecate-vts = 'troubadix.standalone_plugins.deprecate_vts:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
